# modtree-rust

./: Cargo.toml  Makefile  README.md  ROADMAP.md  modules.json  package.json
crates/core/: main.rs
crates/database/: Cargo.toml  README.md
crates/database/src/: client.rs  collection.rs  database.rs  dump.rs  game.rs  integration.rs  lib.rs  main.rs  module_collection.rs
crates/database/src/collection/: functions.rs  mod.rs
crates/database/src/dump/: docker.rs  mod.rs
crates/database/src/inner/: mod.rs  module_collection.rs
crates/database/src/modules/: functions.rs  inner.rs  mod.rs
crates/database/tests/: integration_test.rs
crates/experiments/: Cargo.toml  Makefile
crates/experiments/src/: buf_iter.rs  main.rs  serialize.rs  tsq.rs
crates/experiments/src/tsq/: mod.rs  tsq.rs
crates/fetcher/: Cargo.toml
crates/fetcher/data/: AC5001.json  AC5002.json  AC5003.json  AC5004.json  AC5005.json  AC5006.json  AC5007.json  AC5009.json  AC5011.json  AC5013.json  AC5014.json  ACC1701.json  ACC1701X.json  ACC2706.json  ACC2707.json  ACC2708.json  ACC2709.json  ACC3701.json  ACC3702.json  ACC3703.json  ACC3704.json  ACC3705.json  ACC3706.json  ACC3707.json  ACC4619.json  ACC4629.json  ACC4711.json  ACC4712.json  ACC4713.json  ACC4714.json  ACC4751.json  ACC4752.json  ACC4761A.json  ACC4761H.json  ACE5401.json  ACE5402.json  ACE5403.json  ACE5404.json  ACE5405.json  ACE5406.json  (+6353 more)
crates/fetcher/src/: file_parser.rs  getter.rs  lib.rs  loader.rs  main.rs  types.rs  util.rs
crates/nusmods/: Cargo.toml
crates/nusmods/src/: lib.rs
crates/path/: Cargo.toml
crates/path/src/: lib.rs
crates/plan/: Cargo.toml
crates/plan/src/: builder.rs  debug.rs  lib.rs  plan.rs  plan.rs.bak  semester.rs  structs.rs
crates/plan/src/plan/: functions.rs  inner.rs  mod.rs
crates/postgres/: Cargo.toml
crates/postgres/src/: lib.rs
crates/prereqtree/: Cargo.toml
crates/prereqtree/src/: lib.rs  loader.rs  macros.rs  spec.rs  std_impl.rs
crates/prereqtree2/: Cargo.toml
crates/prereqtree2/src/: lib.rs  macros.rs
crates/types/: Cargo.toml
crates/types/src/: errors.rs  lib.rs  module.rs  nusmods_json.rs  prereqtree.rs
crates/types/src/prereqtree/: experimental.rs  macros.rs  mod.rs  spec.rs  std_impl.rs  util.rs
crates/util/: Cargo.toml
crates/util/src/: combinations.rs  counter.rs  lib.rs  permutator.rs  vec_eq.rs  weave.rs
docker/graph-db/: Dockerfile  README.md  build.sh  docker-compose.yml
docker/mongo-db/: build.sh  docker-compose.yml  up.sh
docker/mongo-db/dump/admin/: system.users.bson  system.users.metadata.json  system.version.metadata.json
docker/mongo-db/dump/modtree/: modules.metadata.json
docker/mongo-db/dump/test_dump/: modules.metadata.json
docker/sql-db/: build.sh  docker-compose.yml
scripts/: debug.sh
