[package]
name = "modtree"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prereqtree = { version = "0.0.1", path = "crates/prereqtree" }
types = { version = "0.0.1", path = "crates/types" }
database = { version = "0.0.1", path = "crates/database" }
tokio = { version = "1.23.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
path = "crates/core/main.rs"
name = "modtree"
doctest = false
bench = false

[workspace]
members = [
  "crates/fetcher",
  "crates/database",
  "crates/types",
  "crates/prereqtree",
  "crates/nusmods",
  "crates/util"
]
exclude = ["crates/experiments"]
