[package]
name = "database"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.3.1"
tokio = { version = "1.23.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
types = { version = "0.0.1", path = "../types" }
fetcher = { version = "0.0.1", path = "../fetcher" }
prereqtree = { version = "0.0.1", path = "../prereqtree" }

[lib]
doctest = false
