[package]
name = "plan"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { version = "0.0.1", path = "../database" }
types = { version = "0.0.1", path = "../types" }
tokio = { version = "1.23.0", features = ["full"] }

[lib]
doctest = false
