[package]
name = "prereqtree"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nusmods = { version = "0.0.1", path = "../nusmods" }
util = { version = "0.0.1", path = "../util" }

[lib]
doctest = false
