[package]
name = "types"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bson = "2.4.0"
reqwest = { version = "0.11", features = [] }
mongodb = "2.3.1"
prereqtree = { version = "0.0.1", path = "../prereqtree" }

[lib]
doctest = false
